<resources>
    <string name="app_name">CountDown</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="life_length_question"> 有一次在知乎上看到一个问题\n“最令你吃惊的事实是什么？”\n\n“人生只有900个月”\n\n\n 你还剩多少? \n 你做了什么? \n 你还想要做什么？</string>

    <string name="sample_name">未登录</string>
    <string name="sample_signature">设置签名</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatever_tomorrow_is">明夕何夕</string>
    <string name="you_have_nowhere_to_go">君已末路</string>
    <string name="begin">进入应用</string>
    <string name="menu_count_down">倒计时</string>
    <string name="menu_calendar">日历</string>
    <string name="menu_article">文章</string>
    <string name="menu_review">每日小记</string>
    <string name="menu_plan">计划</string>
    <string name="menu_hour_plan">小时计划</string>
    <string name="menu_log">日志</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="permission_reject">授权被拒绝,三秒后退出应用</string>

    <string name="to_death">向死而生</string>
    <string name="to_live">向死而生</string>
    <string name="live_age">你在这世界已经存在 %1$f 年了,相当于一天中的8点 你的生命才刚刚开始 加油 </string>
    <string name="left_age">你还可以活 %1$f 年 你还有66的生命 你还可以做很多事</string>
    <string name="born_date">生辰</string>
    <string name="death_date">死忌</string>

    <string name="hard_work">功不唐捐 玉汝于成</string>
    <string name="rule_twenty_mile_">20英里法则</string>

    <!-- article start  -->
    <string name="markdown_preview">预览</string>
    <string name="markdown_edit">编辑</string>
    <string name="action_redo">重做</string>
    <string name="action_undo">撤销</string>
    <string name="action_save">保存</string>

    <string name="hint_markdown_title">标题</string>
    <string name="hint_markdown_content">内容</string>

    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="submit">提 交</string>

    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_save">保存</string>
    <string name="dialog_need_save">当前文件未保存，是否退出?</string>
    <string name="dialog_unsave">不保存</string>
    <string name="hint_search">请输入搜索内容</string>
    <string name="search_article">搜索文章</string>

    <string name="dialog_delete_file">是否删除当前文件?</string>
    <string name="dialog_override_file">文件已存在,是否覆盖当前文件?</string>
    <string name="move_to_this">移动到此</string>
    <string name="apply_to_all">不再询问</string>

    <string name="create_folder">创建文件夹</string>
    <string name="create_folder_name">名称</string>
    <string name="create_folder_remark">备注</string>
    <string name="should_not_be_null">不能为空</string>

    <string name="import_markdown">导入</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="synchronize">同步</string>

    <string name="display_list">列表</string>
    <string name="display_grid">表格</string>
    <string name="display_detail">详情</string>

    <string name="sort_create_time_asc">按创建时间顺序</string>
    <string name="sort_create_time_desc">按创建时间倒序</string>
    <string name="sort_modify_time_asc">按修改时间顺序</string>
    <string name="sort_modify_time_desc">按修改时间倒序</string>
    <string name="sort_size_asc">按文件大小升序</string>
    <string name="sort_size_desc">按文件大小降序</string>
    <string name="sort_alpha_asc">按字母顺序排列</string>
    <string name="sort_alpha_desc">按字母倒序排列</string>

    <!-- log start  -->
    <string name="action_settings">Settings</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="min">分</string>
    <string name="second">秒</string>
    <string name="lasting_time">当前任务已进行 &#160;</string>

    <string name="start_timing">开始记录你的生活吧!</string>
    <string name="start_timing_desc">请回忆你上周主要在做的三件事,如果想不起来,那么你就是在浑噩度日. \n日志的作用便是于此,让你每天明确自己在做的,以及将要做的事.\n所以 开始记录你的生活吧!</string>
    <string name="add_log">添加日志</string>
    <string name="edit_log">编辑日志</string>
    <string name="hint_log_title">标题</string>
    <string name="hint_log_content">要做什么...</string>
    <string name="hint_log_remark">想法...</string>
    <string name="error_log_title_null">日志标题不能为空哦...</string>
    <string name="error_log_content_null">日志内容不能为空哦...</string>

    <string name="select_query_time">请选择查询时间</string>
    <string name="title_activity_settings">Settings</string>

    <!-- hour plan-->
    <string name="hint_hour_plan_title">计划名称</string>
    <string name="hint_hour_plan_desc">描述</string>
    <string name="hour_plan_time">计划时长</string>
    <string name="plan_time_too_long">时间太长了 你完不成的</string>
    <string name="plan_time_not_correct">你输入负数干嘛...</string>
    <string name="plan_time_should_not_be_null">不能为空</string>
    <string name="plan_time_min_to_large">分钟超过60分钟的 你自己手动转成小时...</string>
    <string name="dialog_delete_plan">是否删除计划?</string>

    <!-- Strings related to Settings -->
    <string name="current_version">当前版本</string>
    <string name="author">abcdnml</string>
    <string name="other">其他说明</string>
    <string name="address">QQ空间:https://user.qzone.qq.com/1587567171/infocenter</string>
    <string name="set_born_date">你的生日</string>
    <string name="set_dead_date">你死亡日期</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_key_save_mode">save_net_mode</string>
    <string name="title_activity_hour_plan_detail">HourPlanDetailActivity</string>

</resources>
