<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_function"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main_item_count_down"
            android:checked="true"
            android:icon="@mipmap/countdown"
            android:title="@string/menu_count_down"/>
        <item
            android:id="@+id/menu_main_item_calendar"
            android:checked="true"
            android:icon="@mipmap/calendar"
            android:title="@string/menu_calendar"/>
        <item
            android:id="@+id/menu_main_item_plan"
            android:checked="true"
            android:icon="@mipmap/plan"
            android:title="@string/menu_plan"/>
        <item
            android:id="@+id/menu_main_item_article"
            android:checked="true"
            android:icon="@mipmap/article"
            android:title="@string/menu_article"/>
        <item
            android:id="@+id/menu_main_item_hour_plan"
            android:checked="true"
            android:icon="@mipmap/water"
            android:title="@string/menu_hour_plan"/>
        <item
            android:id="@+id/menu_main_item_log"
            android:checked="true"
            android:icon="@mipmap/log"
            android:title="@string/menu_log"/>
        <item
            android:id="@+id/menu_main_item_review"
            android:checked="true"
            android:icon="@mipmap/review"
            android:title="@string/menu_review"/>
    </group>
    <group
        android:id="@+id/group_setting"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main_item_setting"
            android:checked="false"
            android:icon="@mipmap/setting"
            android:title="@string/menu_setting"/>
    </group>
    <group
        android:id="@+id/group_about"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_main_item_about"
            android:checked="false"
            android:icon="@mipmap/about"
            android:title="@string/menu_about"/>
    </group>
</menu>