<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aaa.cd.ui.guide.GuideForthFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@mipmap/confused"/>
    <com.aaa.cd.view.CustomFontTextView
        android:id="@+id/tv_whatever_tomorrow_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatever_tomorrow_is"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"

        />
    <com.aaa.cd.view.CustomFontTextView
        android:id="@+id/tv_you_have_nowhere_to_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_nowhere_to_go"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tv_whatever_tomorrow_is"
        />
    <Button
        android:id="@+id/tv_into_app"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/begin"
        android:textSize="14sp"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_round_frame_white"
        />
</RelativeLayout>
