<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LogDetailActivity">

    <include
        android:id="@+id/include_title_log_detail"
        layout="@layout/layout_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/content_padding"
        android:layout_below="@id/include_title_log_detail"
        >
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_log_title"
            >
            <EditText
                android:id="@+id/et_log_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="24"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_log_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterTextAppearance="@color/gray_a6"
            app:counterMaxLength="512"
            android:hint="@string/hint_log_content"
            android:layout_marginTop="20dp"
            app:counterOverflowTextAppearance="@color/red_f33"
            >
            <EditText
                android:id="@+id/et_log_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/multi_edit_text_height"
                android:maxLength="512"
                android:gravity="top|start"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_log_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/long_button_height"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:background="#5555ff"
            android:textColor="@color/white"
            />
    </LinearLayout>

</RelativeLayout>
