<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016. SHENQINCI(沈钦赐)<dev@qinc.me>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_16">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_hourplan_hour"
        style="@style/DialogTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_hourplan_hour"
            style="@style/DialogTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:gravity="end"
            android:hint="@string/hour"
            android:paddingEnd="@dimen/dimen_10"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_hourplan_min"
        style="@style/DialogTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_hourplan_min"
            style="@style/DialogTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:focusable="true"
            android:paddingEnd="@dimen/dimen_10"
            android:hint="@string/min"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/tv_hour_plan_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@+id/tv_create_folder_ensure"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_hour_plan_ensure"
        app:layout_constraintTop_toBottomOf="@+id/til_hourplan_min" />

    <TextView
        android:id="@+id/tv_hour_plan_ensure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:text="@string/ensure"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_hourplan_min" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>