<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hourplan.HourPlanEditActivity">

    <include
        android:id="@+id/include_hour_plan_detail"
        layout="@layout/layout_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour_plan_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_hour_plan_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_hour_plan_detail">

        <EditText
            android:id="@+id/et_hour_plan_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="24"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour_plan_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_hour_plan_desc"
        app:counterEnabled="true"
        app:counterMaxLength="512"
        app:counterOverflowTextAppearance="@color/red_f33"
        app:counterTextAppearance="@color/gray_a6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_hour_plan_title">

        <EditText
            android:id="@+id/et_hour_plan_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:maxLength="512"
            android:minHeight="@dimen/multi_edit_half_text_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_plan_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="setTarget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_hour_plan_desc" />

    <Button
        android:id="@+id/btn_hour_plan_submit"
        android:layout_width="0dp"
        android:layout_height="@dimen/long_button_height"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#5555ff"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_plan_time" />

</androidx.constraintlayout.widget.ConstraintLayout>